[package]
name = "grinwallet_nodejs"
version = "0.2.0"
authors = ["Gary Yu <gairy.yu@gmail.com>"]
description = "Grin Wallet Node.js Libs. With embedded Grin Relay service."
license = "Apache-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
publish = false
edition = "2018"

[lib]
name = "grinwallet_nodejs"
crate-type = ["cdylib"]

[dependencies]
neon = "0.3.3"
clap = { version = "2.31", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
failure = "0.1"
failure_derive = "0.1"
linefeed = "0.6"
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
prettytable-rs = "0.7"
regex = "1"
rpassword = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
uuid = "0.7.4"

# Normal using
#grin_wallet = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.1-beta.4" }
#grin_wallet_api = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.1-beta.4" }
#grin_wallet_config = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.1-beta.4" }
#grin_wallet_controller = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.1-beta.4" }
#grin_wallet_impls = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.1-beta.4" }
#grin_wallet_libwallet = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.1-beta.4" }
#grin_wallet_util = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.1-beta.4" }
#grin_wallet_relay = { git = "https://github.com/gottstech/grin-wallet", tag = "v2.0.1-beta.4" }

# Bleeding edge
grin_wallet = { git = "https://github.com/gottstech/grin-wallet", rev = "538d836" }
grin_wallet_api = { git = "https://github.com/gottstech/grin-wallet", rev = "538d836" }
grin_wallet_config = { git = "https://github.com/gottstech/grin-wallet", rev = "538d836" }
grin_wallet_controller = { git = "https://github.com/gottstech/grin-wallet", rev = "538d836" }
grin_wallet_impls = { git = "https://github.com/gottstech/grin-wallet", rev = "538d836" }
grin_wallet_libwallet = { git = "https://github.com/gottstech/grin-wallet", rev = "538d836" }
grin_wallet_util = { git = "https://github.com/gottstech/grin-wallet", rev = "538d836" }
grin_wallet_relay = { git = "https://github.com/gottstech/grin-wallet", rev = "538d836" }

# In case of local development
#grin_wallet_api = { path = "../../grin-wallet/api" }
#grin_wallet_config = { path = "../../grin-wallet/config" }
#grin_wallet_controller = { path = "../../grin-wallet/controller" }
#grin_wallet_impls = { path = "../../grin-wallet/impls" }
#grin_wallet_libwallet = { path = "../../grin-wallet/libwallet" }
#grin_wallet_util = { path = "../../grin-wallet/util" }
#grin_wallet_relay = { path = "../../grin-wallet/grinrelay" }

[build-dependencies]
neon-build = "0.3.3"
built = "0.3"
